# document-processing-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Manual de uso y especificaciones.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: logging.py  settings.py
config/workflows/: default.yaml
docs/components/: 00-indice.md  01-core-framework.md  02-api-gateway.md  03-workflow-router.md  04-splitter.md  05-ocr.md  06-classifier.md  07-classification-aggregator.md  08-extractor.md  09-extraction-aggregator.md  10-consolidator.md  11-sla-monitor.md  12-backoffice.md
src/: __main__.py
src/components/api_gateway/: app.py
src/components/backoffice/: app.py
src/components/backoffice/static/: style.css
src/components/backoffice/templates/: index.html  task.html
src/components/classification_aggregator/: component.py
src/components/classifier/: component.py
src/components/consolidator/: component.py
src/components/extraction_aggregator/: component.py
src/components/extractor/: component.py
src/components/ocr/: component.py
src/components/sla_monitor/: component.py
src/components/splitter/: component.py
src/components/workflow_router/: component.py
src/core/: base_component.py  database.py  health.py  models.py  rabbitmq.py  routing.py  schemas.py  sla.py  workflow_loader.py
src/migrations/: env.py
src/migrations/versions/: 001_initial_schema.py  002_add_workflow_routing_to_backoffice_tasks.py
