[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docproc"
version = "0.1.0"
description = "Distributed document processing system"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-multipart>=0.0.9",
    # Async RabbitMQ
    "aio-pika>=9.4,<10",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    # Schema & config
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "pyyaml>=6.0,<7",
    # Logging
    "structlog>=24.1,<25",
    # Health checks
    "aiohttp>=3.9,<4",
    # Jinja2 for backoffice templates
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "testcontainers[rabbitmq,postgres]>=4.0,<5",
    "factory-boy>=3.3,<4",
    "ruff>=0.3,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
